--- a/DynamicProgramming.ipynb
+++ b/DynamicProgramming.ipynb
@@ -171,6 +171,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__enter__', '__eq__', '__exit__', '__format__', '__ge__', '__getattr__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_elapsed_steps', '_max_episode_steps', 'action_space', 'class_name', 'close', 'compute_reward', 'env', 'metadata', 'observation_space', 'render', 'reset', 'reward_range', 'seed', 'spec', 'step', 'unwrapped']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(env))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('__class__', <class 'gym.wrappers.time_limit.TimeLimit'>)\n",
+      "('__delattr__', <method-wrapper '__delattr__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__dict__', {'env': <gym.envs.toy_text.frozen_lake.FrozenLakeEnv object at 0x7fee403eec70>, 'action_space': Discrete(4), 'observation_space': Discrete(16), 'reward_range': (0, 1), 'metadata': {'render.modes': ['human', 'ansi']}, '_max_episode_steps': 100, '_elapsed_steps': None})\n",
+      "('__dir__', <built-in method __dir__ of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__doc__', None)\n",
+      "('__enter__', <bound method Env.__enter__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__eq__', <method-wrapper '__eq__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__exit__', <bound method Env.__exit__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__format__', <built-in method __format__ of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__ge__', <method-wrapper '__ge__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__getattr__', <bound method Wrapper.__getattr__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__getattribute__', <method-wrapper '__getattribute__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__gt__', <method-wrapper '__gt__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__hash__', <method-wrapper '__hash__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__init__', <bound method TimeLimit.__init__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__init_subclass__', <built-in method __init_subclass__ of type object at 0x55b59df4ab40>)\n",
+      "('__le__', <method-wrapper '__le__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__lt__', <method-wrapper '__lt__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__module__', 'gym.wrappers.time_limit')\n",
+      "('__ne__', <method-wrapper '__ne__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__new__', <built-in method __new__ of type object at 0x55b59bb71c60>)\n",
+      "('__reduce__', <built-in method __reduce__ of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__reduce_ex__', <built-in method __reduce_ex__ of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__repr__', <bound method Wrapper.__repr__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__setattr__', <method-wrapper '__setattr__' of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__sizeof__', <built-in method __sizeof__ of TimeLimit object at 0x7fee403eeca0>)\n",
+      "('__str__', <bound method Wrapper.__str__ of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('__subclasshook__', <built-in method __subclasshook__ of type object at 0x55b59df4ab40>)\n",
+      "('__weakref__', None)\n",
+      "('_elapsed_steps', None)\n",
+      "('_max_episode_steps', 100)\n",
+      "('action_space', Discrete(4))\n",
+      "('class_name', <bound method Wrapper.class_name of <class 'gym.wrappers.time_limit.TimeLimit'>>)\n",
+      "('close', <bound method Wrapper.close of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('compute_reward', <bound method Wrapper.compute_reward of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('env', <gym.envs.toy_text.frozen_lake.FrozenLakeEnv object at 0x7fee403eec70>)\n",
+      "('metadata', {'render.modes': ['human', 'ansi']})\n",
+      "('observation_space', Discrete(16))\n",
+      "('render', <bound method Wrapper.render of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('reset', <bound method TimeLimit.reset of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('reward_range', (0, 1))\n",
+      "('seed', <bound method Wrapper.seed of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('spec', EnvSpec(FrozenLake-v0))\n",
+      "('step', <bound method TimeLimit.step of <TimeLimit<FrozenLakeEnv<FrozenLake-v0>>>>)\n",
+      "('unwrapped', <gym.envs.toy_text.frozen_lake.FrozenLakeEnv object at 0x7fee403eec70>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "for method in inspect.getmembers(env):\n",
+    "    print(method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'env': <gym.envs.toy_text.frozen_lake.FrozenLakeEnv object at 0x7fee403eec70>, 'action_space': Discrete(4), 'observation_space': Discrete(16), 'reward_range': (0, 1), 'metadata': {'render.modes': ['human', 'ansi']}, '_max_episode_steps': 100, '_elapsed_steps': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vars(env))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +308,7 @@
        "0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +327,8 @@
      "output_type": "stream",
      "text": [
       "  (Down)\n",
-      "SFFF\n",
-      "\u001b[41mF\u001b[0mHFH\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
       "FFFH\n",
       "HFFG\n"
      ]
@@ -244,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +349,8 @@
      "output_type": "stream",
      "text": [
       "  (Right)\n",
-      "\u001b[41mS\u001b[0mFFF\n",
-      "FHFH\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
       "FFFH\n",
       "HFFG\n"
      ]
@@ -266,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +371,8 @@
      "output_type": "stream",
      "text": [
       "  (Up)\n",
-      "SF\u001b[41mF\u001b[0mF\n",
-      "FHFH\n",
+      "SFFF\n",
+      "F\u001b[41mH\u001b[0mFH\n",
       "FFFH\n",
       "HFFG\n"
      ]
@@ -288,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +396,7 @@
        " (0.3333333333333333, 2, 0.0, False)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,21 +421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "class Planner:\n",
+    "    # 環境を引数としてインスタンス変数に代入\n",
     "    def __init__(self, env):\n",
     "        self.env = env\n",
     "        \n",
+    "    # 状態s（0~15）を受け取って、行列位置に変換するメソッド\n",
     "    def s_to_loc(self, s):\n",
     "        row = s // self.env.ncol\n",
     "        col = s % self.env.ncol\n",
     "        return row, col\n",
     "    \n",
+    "    # 状態s（0~15）を受け取って、状態sの報酬を返すメソッド\n",
     "    def reward(self, s):\n",
     "        row, col = self.s_to_loc(s)\n",
     "        if self.env.desc[row][col] == b'H':\n",
@@ -351,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -359,21 +459,23 @@
      "output_type": "stream",
      "text": [
       "  (Up)\n",
-      "SF\u001b[41mF\u001b[0mF\n",
-      "FHFH\n",
+      "SFFF\n",
+      "F\u001b[41mH\u001b[0mFH\n",
       "FFFH\n",
       "HFFG\n"
      ]
     }
    ],
    "source": [
+    "# インスタンス生成\n",
     "pl = Planner(env)\n",
+    "# インスタンスenvの状態を描画\n",
     "pl.env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -382,12 +484,13 @@
        "1"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# インスタンスplの状態s=15における報酬を出力\n",
     "pl.reward(15)"
    ]
   },
@@ -396,17 +499,16 @@
    "metadata": {},
    "source": [
     "## 2.1. 動的計画法\n",
-    "* 状態sに対して、価値V(s)を計算する\n",
-    "* 価値が最大になる行動を取る\n",
-    "\n",
-    " - 状態の価値:その状態のますにおける報酬 + ますから最善の行動をしたときにもらえる報酬"
+    "* 状態sに対して、価値V(s)を計算する  \n",
+    "* 価値が最大になる行動を取る  \n",
+    " - 状態の価値:その状態のマスにおける報酬 + マスから最善の行動をしたときにもらえる報酬"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "R(s): 状態sでの報酬\n",
+    "$R(s)$:状態sでの報酬\n",
     "$$V(s) = R(s) + \\gamma \\max_a \\sum_{s^{\\prime}} T(s^{\\prime} |s, a) V(s^{\\prime})$$\n",
     "\n",
     "T(s'|s,a):sからaという行動をとったときにs'にいける遷移確率\n",
@@ -436,14 +538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
     "import pandas as pd\n",
-    "\n",
-    "import pandas as pd\n",
+    "import time\n",
+    "import sys\n",
     "\n",
     "class Planner:\n",
     "    def __init__(self, env):\n",
@@ -471,6 +573,7 @@
     "            V[s] = self.reward(s)\n",
     "        while True:\n",
     "            delta = 0\n",
+    "            # print(self.dict_to_grid(V))\n",
     "            for s in V:\n",
     "                row, col = self.s_to_loc(s)\n",
     "                if self.env.desc[row][col] in [b'H', b'G']:\n",
@@ -481,13 +584,12 @@
     "                    for prob, next_s, _, _ in self.env.P[s][a]:\n",
     "                        r += gamma * prob * V[next_s]\n",
     "                    expected_rewards.append(r)\n",
+    "                # print('s={}:{}'.format(s,expected_rewards))\n",
     "                max_reward = max(expected_rewards)\n",
     "                new_V = self.reward(s) + max_reward\n",
-    "            \n",
     "                # |V_i+1 - V_i|\n",
     "                delta = max(delta, abs(new_V - V[s]))\n",
     "                V[s] = new_V\n",
-    "            \n",
     "            if delta < threshold:\n",
     "                break\n",
     "                \n",
@@ -506,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +679,7 @@
        "3 -1.000000  0.311850  0.562218  1.00000"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
